welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:4: error: illegal start of simple pattern
    var val:Int = -1
        ^indexOfValue:5: error: '=' expected but ';' found.
    if (lookingFor==nums[cpt]) {
^indexOfValue:11: error: ';' expected but 'val' found.
  return val
         ^