welcome.lessons.welcome.array.search.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {
  for (i <- 0 to nums.length - 1) {
    var cpt:Int =0
    var val:Int = -1
    if (lookingFor==nums[cpt]) {
      return i
    } else {
      cpt = cpt + 1
    }
  }
  return val
}